--- a/libs/Parse-1.5.1-javadoc/com/parse/class-use/ParseException.html
+++ b/libs/Parse-1.5.1-javadoc/com/parse/class-use/ParseException.html
@@ -405,17 +405,35 @@ T</CODE></FONT></TD>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
-<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#pinAll(java.util.List)">pinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects)</CODE>
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
+<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#pinAll(java.util.List)">pinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects)</CODE>
 
 <BR>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stores the objects and every object they point to in the local datastore, recursively.</TD>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
 <TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#pinAll(java.lang.String, java.util.List)">pinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/lang/String.html?is-external=true" title="class or interface in java.lang">String</A>&nbsp;name,
-       <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects)</CODE>
+       <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects)</CODE>
 
 <BR>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Stores the objects and every object they point to in the local datastore, recursively.</TD>
@@ -520,8 +538,17 @@ T</CODE></FONT></TD>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
-<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAll(java.util.List)">unpinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects)</CODE>
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
+<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAll(java.util.List)">unpinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects)</CODE>
 
 <BR>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Removes the objects and every object they point to in the local datastore, recursively.</TD>
@@ -536,9 +563,18 @@ T</CODE></FONT></TD>
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
 <TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAll(java.lang.String, java.util.List)">unpinAll</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/lang/String.html?is-external=true" title="class or interface in java.lang">String</A>&nbsp;name,
-         <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects)</CODE>
+         <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects)</CODE>
 
 <BR>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Removes the objects and every object they point to in the local datastore, recursively.</TD>
