--- a/libs/Parse-1.5.1-javadoc/com/parse/class-use/ParseQuery.html
+++ b/libs/Parse-1.5.1-javadoc/com/parse/class-use/ParseQuery.html
@@ -252,6 +252,22 @@ Uses of <A HREF="../../../com/parse/ParseQuery.html" title="class in com.parse">
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
 <CODE>&nbsp;<A HREF="../../../com/parse/ParseQuery.html" title="class in com.parse">ParseQuery</A>&lt;<A HREF="../../../com/parse/ParseQuery.html" title="type parameter in ParseQuery">T</A>&gt;</CODE></FONT></TD>
+<TD><CODE><B>ParseQuery.</B><B><A HREF="../../../com/parse/ParseQuery.html#setLimit(int)">setLimit</A></B>(int&nbsp;newLimit)</CODE>
+
+<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Controls the maximum number of results that are returned.</TD>
+</TR>
+<TR BGCOLOR="white" CLASS="TableRowColor">
+<TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
+<CODE>&nbsp;<A HREF="../../../com/parse/ParseQuery.html" title="class in com.parse">ParseQuery</A>&lt;<A HREF="../../../com/parse/ParseQuery.html" title="type parameter in ParseQuery">T</A>&gt;</CODE></FONT></TD>
+<TD><CODE><B>ParseQuery.</B><B><A HREF="../../../com/parse/ParseQuery.html#setSkip(int)">setSkip</A></B>(int&nbsp;newSkip)</CODE>
+
+<BR>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Controls the number of results to skip before returning any results.</TD>
+</TR>
+<TR BGCOLOR="white" CLASS="TableRowColor">
+<TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
+<CODE>&nbsp;<A HREF="../../../com/parse/ParseQuery.html" title="class in com.parse">ParseQuery</A>&lt;<A HREF="../../../com/parse/ParseQuery.html" title="type parameter in ParseQuery">T</A>&gt;</CODE></FONT></TD>
 <TD><CODE><B>ParseQuery.</B><B><A HREF="../../../com/parse/ParseQuery.html#whereContainedIn(java.lang.String, java.util.Collection)">whereContainedIn</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/lang/String.html?is-external=true" title="class or interface in java.lang">String</A>&nbsp;key,
                  <A target="_top" HREF="http://developer.android.com/reference/java/util/Collection.html?is-external=true" title="class or interface in java.util">Collection</A>&lt;? extends <A target="_top" HREF="http://developer.android.com/reference/java/lang/Object.html?is-external=true" title="class or interface in java.lang">Object</A>&gt;&nbsp;values)</CODE>
 
