--- a/libs/Parse-1.5.1-javadoc/index-all.html
+++ b/libs/Parse-1.5.1-javadoc/index-all.html
@@ -1085,22 +1085,22 @@ Method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in
 <DT><A HREF="./com/parse/ParseObject.html#pin()"><B>pin()</B></A> - 
 Method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the object and every object it points to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAll(java.lang.String, java.util.List)"><B>pinAll(String, List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAll(java.lang.String, java.util.List)"><B>pinAll(String, List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAll(java.util.List)"><B>pinAll(List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAll(java.util.List)"><B>pinAll(List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.lang.String, java.util.List, com.parse.SaveCallback)"><B>pinAllInBackground(String, List&lt;ParseObject&gt;, SaveCallback)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.lang.String, java.util.List, com.parse.SaveCallback)"><B>pinAllInBackground(String, List&lt;T&gt;, SaveCallback)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.lang.String, java.util.List)"><B>pinAllInBackground(String, List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.lang.String, java.util.List)"><B>pinAllInBackground(String, List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.util.List, com.parse.SaveCallback)"><B>pinAllInBackground(List&lt;ParseObject&gt;, SaveCallback)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.util.List, com.parse.SaveCallback)"><B>pinAllInBackground(List&lt;T&gt;, SaveCallback)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.util.List)"><B>pinAllInBackground(List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#pinAllInBackground(java.util.List)"><B>pinAllInBackground(List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Stores the objects and every object they point to in the local datastore, recursively.
 <DT><A HREF="./com/parse/ParseObject.html#pinInBackground(java.lang.String, com.parse.SaveCallback)"><B>pinInBackground(String, SaveCallback)</B></A> - 
@@ -1478,10 +1478,10 @@ Method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in
 <DT><A HREF="./com/parse/ParseObject.html#unpin()"><B>unpin()</B></A> - 
 Method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the object and every object it points to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAll(java.lang.String, java.util.List)"><B>unpinAll(String, List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAll(java.lang.String, java.util.List)"><B>unpinAll(String, List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAll(java.util.List)"><B>unpinAll(List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAll(java.util.List)"><B>unpinAll(List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
 <DT><A HREF="./com/parse/ParseObject.html#unpinAll(java.lang.String)"><B>unpinAll(String)</B></A> - 
@@ -1490,16 +1490,16 @@ Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="c
 <DT><A HREF="./com/parse/ParseObject.html#unpinAll()"><B>unpinAll()</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, java.util.List, com.parse.DeleteCallback)"><B>unpinAllInBackground(String, List&lt;ParseObject&gt;, DeleteCallback)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, java.util.List, com.parse.DeleteCallback)"><B>unpinAllInBackground(String, List&lt;T&gt;, DeleteCallback)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, java.util.List)"><B>unpinAllInBackground(String, List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, java.util.List)"><B>unpinAllInBackground(String, List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.util.List, com.parse.DeleteCallback)"><B>unpinAllInBackground(List&lt;ParseObject&gt;, DeleteCallback)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.util.List, com.parse.DeleteCallback)"><B>unpinAllInBackground(List&lt;T&gt;, DeleteCallback)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
-<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.util.List)"><B>unpinAllInBackground(List&lt;ParseObject&gt;)</B></A> - 
+<DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.util.List)"><B>unpinAllInBackground(List&lt;T&gt;)</B></A> - 
 Static method in class com.parse.<A HREF="./com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>
 <DD>Removes the objects and every object they point to in the local datastore, recursively.
 <DT><A HREF="./com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, com.parse.DeleteCallback)"><B>unpinAllInBackground(String, DeleteCallback)</B></A> - 
