--- a/libs/Parse-1.5.1-javadoc/com/parse/class-use/DeleteCallback.html
+++ b/libs/Parse-1.5.1-javadoc/com/parse/class-use/DeleteCallback.html
@@ -130,8 +130,17 @@ Uses of <A HREF="../../../com/parse/DeleteCallback.html" title="class in com.par
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
-<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAllInBackground(java.util.List, com.parse.DeleteCallback)">unpinAllInBackground</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects,
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
+<TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAllInBackground(java.util.List, com.parse.DeleteCallback)">unpinAllInBackground</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects,
                      <A HREF="../../../com/parse/DeleteCallback.html" title="class in com.parse">DeleteCallback</A>&nbsp;callback)</CODE>
 
 <BR>
@@ -148,9 +157,18 @@ Uses of <A HREF="../../../com/parse/DeleteCallback.html" title="class in com.par
 </TR>
 <TR BGCOLOR="white" CLASS="TableRowColor">
 <TD ALIGN="right" VALIGN="top" WIDTH="1%"><FONT SIZE="-1">
-<CODE>static&nbsp;void</CODE></FONT></TD>
+<CODE>static
+<TABLE BORDER="0" CELLPADDING="0" CELLSPACING="0" SUMMARY="">
+<TR ALIGN="right" VALIGN="">
+<TD NOWRAP><FONT SIZE="-1">
+<CODE>&lt;T extends <A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt; 
+<BR>
+void</CODE></FONT></TD>
+</TR>
+</TABLE>
+</CODE></FONT></TD>
 <TD><CODE><B>ParseObject.</B><B><A HREF="../../../com/parse/ParseObject.html#unpinAllInBackground(java.lang.String, java.util.List, com.parse.DeleteCallback)">unpinAllInBackground</A></B>(<A target="_top" HREF="http://developer.android.com/reference/java/lang/String.html?is-external=true" title="class or interface in java.lang">String</A>&nbsp;name,
-                     <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;<A HREF="../../../com/parse/ParseObject.html" title="class in com.parse">ParseObject</A>&gt;&nbsp;objects,
+                     <A target="_top" HREF="http://developer.android.com/reference/java/util/List.html?is-external=true" title="class or interface in java.util">List</A>&lt;T&gt;&nbsp;objects,
                      <A HREF="../../../com/parse/DeleteCallback.html" title="class in com.parse">DeleteCallback</A>&nbsp;callback)</CODE>
 
 <BR>
